[package]
name = "nh-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["tokio", "http1", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["rt", "macros", "net", "sync", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["fs"] }
turso = "0.3.2"
uuid = { version = "1.18.1", features = ["v4"] }


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
