[package]
name = "nh-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = { version = "0.8.7", features = ["tokio", "http1", "json"] }
password-hash = "0.5.0"
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.48.0", features = ["rt", "macros", "net", "sync", "rt-multi-thread"] }
toml = "0.9.8"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
uuid = { version = "1.18.1", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
